--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,4 +6,11 @@ services:
     build: "frontend"
     image: "frontend"
     ports:
-      - "80:80"
+      - "8080:80"
+  tunnel:
+    container_name: cloudflared-tunnel
+    image: cloudflare/cloudflared
+    restart: unless-stopped
+    command: tunnel run
+    environment:
+      - TUNNEL_TOKEN=${TUNNEL_TOKEN}
